Completed converter tests